--- a/docs/manual/optic_refs.bib
+++ b/docs/manual/optic_refs.bib
@@ -23,13 +23,13 @@ pages = {011307},
 year = {2014},
 doi = {10.1063/1.4863665},
 
-URL = { 
+URL = {
         https://doi.org/10.1063/1.4863665
-    
+
 },
-eprint = { 
+eprint = {
         https://doi.org/10.1063/1.4863665
-    
+
 }
 
 }
@@ -55,4 +55,11 @@ eprint = {
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevC.6.114},
   url = {https://link.aps.org/doi/10.1103/PhysRevC.6.114}
+}
+
+@misc{2007.03503,
+Author = {Ming Lyu and Claire Gmachl},
+Title = {Correction to the Effective Refractive Index and the Confinement Factor in Waveguide Modeling for Quantum Cascade Lasers},
+Year = {2020},
+Eprint = {arXiv:2007.03503},
 }
