--- a/docs/manual/quantum_refs.bib
+++ b/docs/manual/quantum_refs.bib
@@ -51,3 +51,10 @@
   publisher={Elsevier}
 }
 
+@phdthesis{mingthesis,
+  title     = {Software Design for Modeling Quantum Cascade Lasers and Long Wavelength ($\sim$ 16 $\mu$m) GaAs/AlGaAs Quantum Cascade Lasers},
+  author    = {Ming Lyu},
+  school    = {Princeton University},
+  year      = 2021,
+  address   = {Princeton University}
+}
